--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,8 @@ ul {
 .biopic {
   float: left;
   padding: 10px;
-  width: 200px;
+  width: 150px;
+  height: auto;
   display: none;
 }
 
@@ -166,6 +167,7 @@ span {
 
 #lets-connect {
   text-align: center;
+  margin-top: 5%;
 }
 
 /* Media queries to handle various device widths */
@@ -203,7 +205,7 @@ span {
 #map-div {
   height: 400px;
   width: 100%;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
 }
 
 @media only screen and (min-width: 750px) {
@@ -212,3 +214,24 @@ span {
     display: block;
   }
 }
+
+/*CSS additions*/
+#projects img {
+  max-width: 20em;
+  height: auto;
+}
+
+
+#workExperience,
+#projects,
+#education,
+#map-div {
+  margin: 0 auto;
+  max-width: 75em;
+  width: 100%;
+  padding: 2em;
+}
+
+
+
+
